--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,9 @@ pydantic-settings>=2.0.0
 azure-identity>=1.14.0
 azure-monitor-opentelemetry>=1.0.0
 opentelemetry-api>=1.20.0
+
+# Microsoft Foundry (Azure AI) - Agent Framework SDK (requires --pre flag)
+agent-framework-azure-ai>=0.1.0
 azure-ai-projects>=1.0.0b1
 
 # Bot Framework & Teams Integration
